<resources>
    <string name="app_name">Baylo</string>
    <string name="title_home">Home</string>
    <string name="title_loves">Dashboard</string>
    <string name="title_chats">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up2">SignUp2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="strItemName1">NINTENDO SWITCH V2</string>
    <string name="strItemName2">CASIO FX-991EX CALCULATOR</string>
    <string name="strItemDes1">Complete accessories with box.\nInclusions:
        \n128gb memory card
        \nThumb grips
        \nTempered glass
        \n3 downloaded games (Zelda BOTW, Mario Odyssey, and Mario Kart) </string>
    <string name="strItemDes2">A calculator good for engineers</string>
    <string name="strItemDis1">2.7 km away</string>
    <string name="strItemDis2">1.4 km away</string>
    <string name="strItemName3">HONEY BUTTER ALMOND</string>
    <string name="strItemName4">JBL FLIP 5</string>
    <string name="strItemDes3">Korean almonds bought from Big Mart</string>
    <string name="StrItemDes4">Second-hand bluetooth speaker</string>
    <string name="strItemDis3">2.2 km away</string>
    <string name="strItemDis4">3.1 km away</string>
    <string name="strItemMsg1">Hi! I’d like to inquire about your Nintendo Switch V2.</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>