<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mcm.edu.ph.baylo.View.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_loves"
        android:name="mcm.edu.ph.baylo.View.fragments.LovesFragment"
        android:label="@string/title_loves"
        tools:layout="@layout/fragment_loves" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="mcm.edu.ph.baylo.View.fragments.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="mcm.edu.ph.baylo.View.fragments.MeFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_me" />
</navigation>